--- a/backend/c#/NewslettersSummaryConsole/NewslettersSummaryConsole.csproj
+++ b/backend/c#/NewslettersSummaryConsole/NewslettersSummaryConsole.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="DotNetEnv" Version="3.1.1" />
     <PackageReference Include="MailKit" Version="4.10.0" />
   </ItemGroup>
 
