--- a/backend/c#/NewslettersSummaryConsole/.env.example
+++ b/backend/c#/NewslettersSummaryConsole/.env.example
@@ -1,8 +1,14 @@
 # IMAP configuration
 IMAP_ADDRESS=imap_address
 IMAP_PORT=993
-EMAIL=email
-PASSWORD=password 
+IMAP_USERNAME=email
+IMAP_PASSWORD=password 
 
 # Claude API key
-CLAUDE_API_KEY=your_api_key
+CLAUDE_API_KEY=your_claude_api_key
+
+# ChatGPT API key
+CHATGPT_API_KEY=your_chatgpt_api_key
+
+# Summaries path
+SUMMARIES_PATH=/absolute/path/to/your/summaries/folder
