--- a/tools/NewslettersSummaryConsole/.env.example
+++ b/tools/NewslettersSummaryConsole/.env.example
@@ -10,5 +10,12 @@ CLAUDE_API_KEY=your_claude_api_key
 # ChatGPT API key
 CHATGPT_API_KEY=your_chatgpt_api_key
 
+# Ollama configuration
+OLLAMA_API_URL=http://localhost:11434
+OLLAMA_MODEL=mistral
+
+# Summarizer selection (claude, chatgpt, ollama)
+ACTIVE_SUMMARIZER=ollama
+
 # Summaries path
 SUMMARIES_PATH=/absolute/path/to/your/summaries/folder
