--- a/tools/NewslettersSummaryConsole/NewslettersSummaryConsole.csproj
+++ b/tools/NewslettersSummaryConsole/NewslettersSummaryConsole.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="DotNetEnv" Version="3.1.1" />
+    <PackageReference Include="HtmlAgilityPack" Version="1.11.59" />
     <PackageReference Include="MailKit" Version="4.10.0" />
   </ItemGroup>
 
