--- a/website/package.json
+++ b/website/package.json
@@ -4,7 +4,6 @@
   "description": "frodigo.com website",
   "main": "rss.xml.js",
   "scripts": {
-    "test:unit": "jest",
     "test:e2e": "playwright test e2e/"
   },
   "author": "Marcin Kwiatkowski",
@@ -16,8 +15,6 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.51.1",
-    "@types/node": "^22.14.0",
-    "jest": "^29.7.0",
-    "jsdom": "^22.1.0"
+    "@types/node": "^22.14.0"
   }
 }
