--- a/website/.gitignore
+++ b/website/.gitignore
@@ -13,3 +13,9 @@ screenshots/
 
 # RSS Feed
 links-to-test.json
+
+# Ignore all .env files
+.env
+
+# Ignore all __pycache__ directories
+__pycache__/
