fix: fixed minor bugs

--- a/tools/NitroDigest/.env.example
+++ b/tools/NitroDigest/.env.example
@@ -1,8 +1,8 @@
 # IMAP configuration
-IMAP_ADDRESS=imap_address
+IMAP_SERVER=imap_address
 IMAP_PORT=993
-IMAP_USERNAME=email
-IMAP_PASSWORD=password 
+EMAIL_ADDRESS=email
+EMAIL_PASSWORD=password 
 
 # Claude API key
 CLAUDE_API_KEY=your_claude_api_key
