fix: changed workflow trigger

--- a/.github/workflows/garage_static_code_analysis.yml
+++ b/.github/workflows/garage_static_code_analysis.yml
@@ -1,9 +1,6 @@
 name: Garage Static Code Analysis
 on:
-  push:
-    branches:
-      - main
-      - chore/precommit
+  pull_request:
 
 jobs:
     lint:
