fix: increased ctx length in Ollama Modelfile

--- a/tools/NitroDigest/.env.example
+++ b/tools/NitroDigest/.env.example
@@ -12,7 +12,7 @@ CHATGPT_API_KEY=your_chatgpt_api_key
 
 # Ollama configuration
 OLLAMA_API_URL=http://localhost:11434
-OLLAMA_MODEL=mistral
+OLLAMA_MODEL=nitroModel
 
 # Summarizer selection (claude, chatgpt, ollama)
 ACTIVE_SUMMARIZER=ollama
