refactor!: removed email reader and html extractor, simplified config
From now user needs to read emails and prepare data for summarizing outside this program.
nitrodigest from now do two things:
1. summmarize (one file or files in a directory)
2. save summarized text to a file

User can pass file or folder via argument.

Besides I simplified config and from now it's a flat objects

BREAAKING CHANGE: program doesn't process emails, it expects that text to summarize will be provided by user

--- a/nitrodigest/config.json.example
+++ b/nitrodigest/config.json.example
@@ -1,17 +1,7 @@
 {
-    "email": {
-        "address": "your-email@gmail.com",
-        "password": "your-password-or-app-password",
-        "server": "imap.gmail.com",
-        "port": 993,
-        "folder": "INBOX"
-    },
-    "summarizer": {
-        "model": "nitroModel",
-        "base_url": "http://localhost:11434",
-        "timeout": 300
-    },
-    "summaries_path": "summaries",
-    "limit": 5,
-    "mark_as_read": true
+    "model": "nitroModel",
+    "ollama_api_url": "http://localhost:11434",
+    "timeout": 300,
+    "prompt_file": "prompt_template.txt",
+    "summaries_path": "summaries"
 }
