--- a/nitrodigest/config.json.example
+++ b/nitrodigest/config.json.example
@@ -1,5 +1,5 @@
 {
-    "model": "nitroModel",
+    "model": "mistral",
     "ollama_api_url": "http://localhost:11434",
     "timeout": 300,
     "prompt_file": "prompt_template.txt",
