--- a/Projects/Nitrodigest/Cli/setup.cfg
+++ b/Projects/Nitrodigest/Cli/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = nitrodigest-cli
-version = 0.1.0
+version = 0.1.1
 author = Marcin Kwiatkowski
 author_email = marcin@frodigo.com
 description = The privacy‑first, local‑LLM text‑summariser for developers.
@@ -15,6 +15,8 @@ package_dir =
     = src
 packages = find:
 python_requires = >=3.6
+py_modules =
+    main
 
 [options.packages.find]
 where = src
@@ -25,6 +27,7 @@ exclude =
     pytest.ini
     config.json
 
+
 [options.entry_points]
 console_scripts =
     nitrodigest = main:main
@@ -32,3 +35,7 @@ console_scripts =
 [project]
 license = "MIT"
 license_files = ["LICENSE"]
+
+[project.urls]
+Homepage = "https://github.com/Frodigo/garage/tree/main/Projects/Nitrodigest/Cli"
+Issues = "https://github.com/Frodigo/garage/issues"
