--- a/.github/workflows/garage_static_code_analysis.yml
+++ b/.github/workflows/garage_static_code_analysis.yml
@@ -1,4 +1,7 @@
 name: Garage Static Code Analysis
+permissions:
+  contents: read
+  pull-requests: write
 on:
   pull_request:
 
@@ -12,9 +15,9 @@ jobs:
           uses: actions/checkout@v4
 
         - name: Setup Python 3.9
-          uses: actions/setup-python@v5.2.0
+          uses: actions/setup-python@v5
           with:
             python-version: 3.9
 
-        - name: Run pre-commit hoooks
-          uses: pre-commit/action@v3.0.1
+        - name: Run pre-commit hooks
+          uses:  pre-commit/action@v3.0.1
