--- a/Projects/Nitrodigest/setup.cfg
+++ b/Projects/Nitrodigest/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = nitrodigest-cli
-version = 0.1.6
+version = 0.1.7
 author = Marcin Kwiatkowski
 author_email = marcin@frodigo.com
 description = The privacy‑first, local‑LLM text‑summariser for developers.
@@ -19,6 +19,7 @@ install_requires =
     requests>=2.28.0
     pyyaml>=6.0
     nltk>=3.9.1
+    emoji>=2.14.1
 
 [options.packages.find]
 where = src
